--- a/css/style.css
+++ b/css/style.css
@@ -196,13 +196,12 @@ body.contents_page {/* classにcontents_pageが指定されているbodyタグ *
 トップページ
 ================================================= */
 .top_eye_catch {
-  height: 500px;
+  height: 1000px;
   color: #fff;
   font-weight: bold;
-  background-image: url(../images/top.jpg);/* 背景画像 */
+  background-image: url(../images/IMG_8420.JPG);/* 背景画像 */
   background-size: cover;/* 背景画像のサイズ 要素いっぱいに表示 */
   background-position: center center;/* 背景画像の位置 */
-  background-attachment: fixed;/* スクロールしたときの背景画像の位置 固定 */
   
   /* 上下左右中央テクニック https://ics.media/entry/17522/ */
   display: flex;
