--- a/css/style.css
+++ b/css/style.css
@@ -79,21 +79,15 @@ header a {
 }
 
 header .inner {
-  background-color: #fff;
+  
   position: relative;
   display: flex;
   justify-content: space-between;
   padding: 15px 20px;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.35);
-  border-radius: 4px;
+  
   margin: 20px;
 }
 
-/* ロゴ */
-#header_logo img {
-  display: block;
-  width: 100px;
-}
 
 /* メニュー */
 #global_menu {
@@ -393,4 +387,34 @@ profileページ
 ======================================================*/
 .mb_m {
   margin-bottom: 20px;
+}
+
+.swiper--wrapper {
+  /* wrapperのサイズを調整 */
+  width: 100%;
+  height: 100px;
+}
+
+.swiper-slide {
+  /* スライドのサイズを調整、中身のテキスト配置調整、背景色 */
+  color: #4e22bd;
+  width: 10%;
+  height: 10%;
+  text-align: center;
+  line-height: 30px;
+}
+
+.swiper-slide:nth-child(3n + 1) {
+  /*1、4、7、3n+1枚目の背景色 */
+  background-color: #562926;
+}
+
+.swiper-slide:nth-child(3n + 2) {
+  /*2、5、8、3n+2枚目の背景色 */
+  background-color: #746510;
+}
+
+.swiper-slide:nth-child(3n + 3) {
+  /*3、6、9、3n+3枚目の背景色 */
+  background-color: #53c638;
 }
