--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ html,
 body {
   height: 100%;
   font-feature-settings: "palt";
-  background-color: #fff;
+  background-color: rgb(255, 255, 255);
   position: relative;
 }
 
@@ -20,7 +20,7 @@ body {
   font-size: 16px;
   line-height: 1.6;
   font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
-  color: #333333;
+  color: #181818;
   letter-spacing: 0.05em;
 }
 
@@ -99,6 +99,7 @@ header .inner {
 
 
 #global_menu a {
+  left: 1000px;
   padding: 0px 13px;
   line-height: 1;
   position: relative;
@@ -110,7 +111,7 @@ header .inner {
 
 #global_menu li.current::before {
   content: "";
-  bottom: 2px;
+  bottom: 100px;
   position: absolute;
   width: 100%;
   height: 10px;
@@ -172,9 +173,13 @@ footer {
 ======================================================*/
 
 body.contents_page {/* classにcontents_pageが指定されているbodyタグ */
-  padding-top: 100px;
+  padding-top: 180px;
 }
-
+h2 {
+  font-size: 40px;
+  padding-left: 30px;
+  padding-bottom: 30px;
+}
 .sec{
   margin-bottom: 40px;
 }
@@ -186,10 +191,22 @@ body.contents_page {/* classにcontents_pageが指定されているbodyタグ *
   margin: auto;
 }
 
+.Hibiki {
+  margin-top: 100px;
+  margin-left: 1000px;
+}
+
+.photo {
+  margin-top: -370px;
+  margin-left: 300px;
+}
+
 /* =================================================
 トップページ
 ================================================= */
 .top_eye_catch {
+  font-size: 30px;
+  letter-spacing: 15px;
   height: 1000px;
   color: #fff;
   font-weight: bold;
