--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ header .inner {
 
 
 #global_menu a {
-  left: 1000px;
+  left: 800px;
   padding: 0px 13px;
   line-height: 1;
   position: relative;
@@ -193,12 +193,12 @@ h2 {
 
 .Hibiki {
   margin-top: 100px;
-  margin-left: 1000px;
+  margin-left: 850px;
 }
 
 .photo {
-  margin-top: -370px;
-  margin-left: 300px;
+  margin-top: -450px;
+  margin-left: 170px;
 }
 
 /* =================================================
@@ -218,6 +218,13 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+h4 {
+  font-size: 13px;
+  letter-spacing: 4px;
+  line-height: 36px;
+  padding-top: 10px;
 }
 
 .link_menu{
